# react-code-review-agent

./: .editorconfig  .mcp.json  AGENTS.md  CLAUDE.md  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
src/frontend_review_agent/: __init__.py  main.py
